<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickLinksActivity"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/quick_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="Quick Links"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/aryabhatta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aryabhatta"
        android:layout_below="@+id/quick_links"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:background="@drawable/textview"
        android:padding="10dp"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textColorLink="@color/colorPrimary"/>

    <TextView
        android:id="@+id/new_aryabhatta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_aryabhatta"
        android:layout_below="@+id/aryabhatta"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:background="@drawable/textview"
        android:padding="10dp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textColorLink="@color/colorPrimary"/>

    <TextView
        android:id="@+id/online_fees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/online_fee"
        android:layout_below="@+id/new_aryabhatta"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:background="@drawable/textview"
        android:padding="10dp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textColorLink="@color/colorPrimary"/>

    <TextView
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:layout_below="@+id/online_fees"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:background="@drawable/textview"
        android:padding="10dp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textColorLink="@color/colorPrimary"/>

    <TextView
        android:id="@+id/nptel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nptel"
        android:layout_below="@+id/library"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:background="@drawable/textview"
        android:padding="10dp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textColorLink="@color/colorPrimary"/>

</RelativeLayout>